# read-team-mcp-server

./: .gitignore  BLOCKING_FIXES.md  README.md  SETUP.md  network_scan_config.json  pyproject.toml  red-team-mcp-presentation.md  requirements.txt  test_agno_mcp.py  test_banner.py  test_config.json  test_mcp_compatibility.py  test_minimal_mcp.py
agent/: OLLAMA_SETUP.md  README.md  mcp_tools.py  redteam_agent.py  simple_agent.py  test_agent.py
examples/: CLAUDE_SETUP.md  README.md  claude_config.json  clean_mcp_demo.py  fastmcp_client.py  fastmcp_client_fixed.py  fastmcp_server.py  nuclei_scanner_mcp.py  official_mcp_client.py  streaming_port_scan_demo.py  test-nuclei-client.py  test-nuclei.py  test_scanning.py  working_mcp_test.py
scripts/: setup_exploits_db.py  setup_sudo.sh
src/agents/: hacking_agent.py  simple_agent.py
src/red_team_mcp/: __init__.py  agent.py  bannerGrabber.py  config.py  constants.py  database.py  domain_discovery.py  fastmcp_server.py  main.py  masscan_scanner.py  metasploit_scanner.py  models.py  nuclei_scanner.py  populate_exploits.py  scanner.py  server.py
tests/: test_database_scans.py  test_fastmcp_tools.py  test_functionality.py  test_metasploit_connection.py  test_metasploit_tools.py  test_vulnerability_scanner.py
